[gd_scene load_steps=5 format=3 uid="uid://c8h1n1sinbtnn"]

[ext_resource type="Texture2D" uid="uid://bx4fryvhesipe" path="res://common/ui/Divider/divider-004.png" id="1_5npjt"]
[ext_resource type="Theme" uid="uid://0fva8xxptln6" path="res://common/main_theme.tres" id="1_lfecp"]
[ext_resource type="Script" path="res://project_menu/project_menu.gd" id="2_w3y6l"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_p50g8"]
bg_color = Color(0.156863, 0.156863, 0.156863, 0.784314)

[node name="ProjectMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_lfecp")
script = ExtResource("2_w3y6l")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -236.0
offset_top = -100.5
offset_right = 236.0
offset_bottom = 100.5
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 64
theme_override_constants/margin_top = 32
theme_override_constants/margin_right = 64
theme_override_constants/margin_bottom = 32

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2

[node name="TitleLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 64
text = "Project Name"
horizontal_alignment = 1

[node name="Dividers" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 0
alignment = 1

[node name="left" type="TextureRect" parent="PanelContainer/MarginContainer/VBoxContainer/Dividers"]
layout_mode = 2
texture = ExtResource("1_5npjt")
flip_h = true

[node name="right" type="TextureRect" parent="PanelContainer/MarginContainer/VBoxContainer/Dividers"]
layout_mode = 2
texture = ExtResource("1_5npjt")

[node name="Spacer" type="Control" parent="PanelContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(2.08165e-12, 32)
layout_mode = 2

[node name="TreesContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(800, 400)
layout_mode = 2
theme_override_constants/separation = 32
alignment = 1

[node name="NoTreesLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/TreesContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(2.08165e-12, 200)
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 0.470588)
theme_override_font_sizes/font_size = 48
text = "No trees yet! Create one below."
vertical_alignment = 1

[node name="Spacer2" type="Control" parent="PanelContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(2.08165e-12, 32)
layout_mode = 2

[node name="ButtonsContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 32
alignment = 1

[node name="NewBtn" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/ButtonsContainer"]
layout_mode = 2
text = "New Tree
"

[node name="BackBtn" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/ButtonsContainer"]
layout_mode = 2
text = "Back"

[node name="DisablePanel" type="Panel" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_p50g8")

[node name="Popup" type="PanelContainer" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -239.0
offset_top = -148.0
offset_right = 239.0
offset_bottom = 148.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="Popup"]
layout_mode = 2
theme_override_constants/margin_left = 64
theme_override_constants/margin_top = 32
theme_override_constants/margin_right = 64
theme_override_constants/margin_bottom = 32

[node name="VBoxContainer" type="VBoxContainer" parent="Popup/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="TNameBox" type="LineEdit" parent="Popup/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
placeholder_text = "Enter tree name..."

[node name="ErrorMessage" type="Label" parent="Popup/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(2.08165e-12, 60)
layout_mode = 2
theme_override_colors/font_color = Color(0.989214, 0.378991, 0.367775, 1)
autowrap_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Popup/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 64

[node name="AcceptBtn" type="Button" parent="Popup/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Accept"

[node name="ExitPopupBtn" type="Button" parent="Popup/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Back"

[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/ButtonsContainer/NewBtn" to="." method="_on_new_btn_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/ButtonsContainer/BackBtn" to="." method="_on_back_btn_pressed"]
[connection signal="pressed" from="Popup/MarginContainer/VBoxContainer/HBoxContainer/AcceptBtn" to="." method="_on_accept_btn_pressed"]
[connection signal="pressed" from="Popup/MarginContainer/VBoxContainer/HBoxContainer/ExitPopupBtn" to="." method="_on_exit_popup_btn_pressed"]
